--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -12,10 +12,10 @@
             <div class="col-md-12 mt-3">
 
             <% if (typeof message !="undefined") { %>
-             <div class="alert alert-warning"><%= message %></div>
+             <div class="alert alert-<%= message.class %>"><%= message.text %></div>
             <% } %>
                 <form   method="post"   >
-             
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <div class="row mb-3">
                         <label for="email" class="col-sm-2 col-form-label">Email</label>
                         <div class="col-sm-8">
