--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -24,9 +24,9 @@
 
         <ul class="navbar-nav ms-auto">
             <% if (isAuth) { %>
-                <!-- <li class="nav-item">
-                    <a href="/account/index" class="nav-link"></a>
-                </li> -->
+                <li class="nav-item">
+                    <a href="/account/index" class="nav-link"><%= fullname %></a>
+                </li>
                 <li class="nav-item"></li>
                     <a href="/account/logout" class="nav-link">Logout</a>
                 </li>
